[package]
name = "password-mngr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.20"
eframe = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
salsa20 = "0.10"
cipher = "0.4"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10.0"
rand = "0.8.5"
rand_core = { version = "0.6", features = ["std"] }